--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,15 +45,11 @@ bind '"' choose-window
 bind "A" command-prompt "rename-window '%%'"
 bind "Escape" copy-mode
 
-# OSX clipboard fixes - https://gist.github.com/algesten/0ba2d7c19763db6a7396126e8526b65b
-# The `reattach-to-user-namespace` command is no longer needed as of tmux-2.6.
-unbind-key -T copy-mode-vi M-w
-bind-key -T copy-mode-vi C-w send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
-
-# Double clicking selects the word also when not in copy-mode.
-bind-key -T root DoubleClick1Pane  select-pane \; copy-mode \; send-keys -X select-word
+bind P paste-buffer
+bind-key -T copy-mode-vi "C-v" send-keys -X begin-selection
+bind-key -T copy-mode-vi "C-y" send-keys -X copy-selection
+bind-key -T copy-mode-vi "C-r" send-keys -X rectangle-toggle
+bind -t copy-mode-vi "C-y" copy-pipe "xclip -sel clip -i"
 
 # Colors - derived from Powerline Double Cyan by Jim Myhrberg
 set -g status-interval 0
