add some minor fix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,9 @@
 #
 
 # Use T as the leader key, not B
-unbind "C-b"
-set -g prefix "C-t"
+#set-option -g prefix M-b
+unbind "M-b"
+set -g prefix "M-t"
 bind "t" send-prefix
 
 set -g bell-action none
@@ -13,12 +14,17 @@ set -g visual-bell off
 set -g display-panes-time 2000
 set -g mouse on
 
-bind "C-d" detach
-bind "C-t" last-window
-
+bind "M-d" detach
+bind "M-t" last-window
+# set position bar on top
+set-option -g status-position top
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
 bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
 bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
+
+# set window array to 1 instead 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Vim-like bindings
 setw -g mode-keys vi
