--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,19 +52,18 @@ bind "A" command-prompt "rename-window '%%'"
 bind "Escape" copy-mode
 
 bind P paste-buffer
-bind-key -T copy-mode-vi "C-v" send-keys -X begin-selection
-bind-key -T copy-mode-vi "C-y" send-keys -X copy-selection
-bind-key -T copy-mode-vi "C-r" send-keys -X rectangle-toggle
-bind -t copy-mode-vi "C-y" copy-pipe "xclip -sel clip -i"
+#bind-key -T copy-mode-vi "C-v" send-keys -X begin-selection
+#bind-key -T copy-mode-vi "C-y" send-keys -X copy-selection
+#bind-key -T copy-mode-vi "C-r" send-keys -X rectangle-toggle
+#bind -t copy-mode-vi "C-y" copy-pipe "xclip -sel clip -i"
 
-# Colors - derived from Powerline Double Cyan by Jim Myhrberg
-set -g status-interval 0
+# clock
+set -g status-interval 1
 set -g status-fg colour240
 set -g status-bg colour233
-set -g status-left "#[fg=colour242] #{host} "
-set -g status-right "#[fg=colour242]:#{session_name}:#{window_index}.#{pane_index} "
+set -g status-left '#[fg=white]#(echo $USER)'
 set -g window-status-format "#[bg=colour233,fg=colour240]  ⋅#I⋅ #W "
-set -g window-status-current-format "#[bg=colour233,fg=colour240,nobold] 《#I》#W #[fg=black,bg=colour233,nobold]"
+set -g window-status-current-format "#[bg=colour233,fg=white,bold] 《#I》#W #[fg=black,bg=colour233,nobold]"
 set -g window-status-current-bg colour39
 set -g window-status-current-fg colour235
 set -g window-status-activity-bg colour245 # fg and bg are flipped here due to
@@ -72,6 +71,9 @@ set -g window-status-activity-fg colour233 # a bug in tmux
 set -g window-status-separator ""
 set -g status-justify centre
 set -g pane-border-bg default
+set-window-option -g clock-mode-colour colour64 #green
+set -g status-right '[#[fg=black,bold]%h %d %Y#[bg=green,fg=white,bold]%l:%M %p#[default]#[fg=green]]'
+# Colors - derived from Powerline Double Cyan by Jim Myhrberg
 set -g pane-border-fg colour238
 set -g pane-active-border-bg default
 set -g pane-active-border-fg colour39
