--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,6 +56,7 @@ bind P paste-buffer
 #bind-key -T copy-mode-vi "C-y" send-keys -X copy-selection
 #bind-key -T copy-mode-vi "C-r" send-keys -X rectangle-toggle
 #bind -t copy-mode-vi "C-y" copy-pipe "xclip -sel clip -i"
+bind -T copy-mode-vi "C-y" send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 
 # clock
 set -g status-interval 1
