--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ bind "M-t" last-window
 set-option -g status-position top
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
 bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
-bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
+bind "C-m" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # set window array to 1 instead 0
 set -g base-index 1
@@ -28,10 +28,13 @@ setw -g pane-base-index 1
 
 # Vim-like bindings
 setw -g mode-keys vi
+
+# WIndow Bindiing
 bind "n" next-window
 bind "p" previous-window
 bind "C-n" next-window
 bind "C-p" previous-window
+
 bind "s" split-window -v
 bind "v" split-window -h
 bind "j" select-pane -D
@@ -47,9 +50,12 @@ bind "!" break-pane
 bind \; choose-tree
 
 # Screen-like bindings
+set-option -g set-titles on
+set-option -g set-titles-string "#W"
 bind '"' choose-window
 bind "A" command-prompt "rename-window '%%'"
 bind "Escape" copy-mode
+set-option -g allow-rename off
 
 bind P paste-buffer
 #bind-key -T copy-mode-vi "C-v" send-keys -X begin-selection
@@ -58,11 +64,12 @@ bind P paste-buffer
 #bind -t copy-mode-vi "C-y" copy-pipe "xclip -sel clip -i"
 bind -T copy-mode-vi "C-y" send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 
+
 # clock
 set -g status-interval 1
 set -g status-fg colour240
 set -g status-bg colour233
-set -g status-left '#[fg=white]#(echo $USER)'
+set -g status-left '#[fg=white]#(echo Pagiku)'
 set -g window-status-format "#[bg=colour233,fg=colour240]  ⋅#I⋅ #W "
 set -g window-status-current-format "#[bg=colour233,fg=white,bold] 《#I》#W #[fg=black,bg=colour233,nobold]"
 set -g window-status-current-bg colour39
