--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,9 +61,9 @@ bind P paste-buffer
 #bind-key -T copy-mode-vi "C-v" send-keys -X begin-selection
 #bind-key -T copy-mode-vi "C-y" send-keys -X copy-selection
 #bind-key -T copy-mode-vi "C-r" send-keys -X rectangle-toggle
-#bind -t copy-mode-vi "C-y" copy-pipe "xclip -sel clip -i"
-bind -T copy-mode-vi "C-y" send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
-
+#bind -T copy-mode-vi "C-y" copy-pipe "xclip -sel clip -i"
+#bind -T copy-mode-vi "C-y" send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
+bind -T copy-mode-vi "C-y" send-keys -X copy-pipe-and-cancel  "xclip -sel clip -i"
 
 # clock
 set -g status-interval 1
